--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,7 +1,8 @@
-pipeline {
+   pipeline {
     agent any
     
     environment {
+       PATH = "C:\\WINDOWS\\SYSTEM32;C:\\Program Files\\Docker\\Docker\\resources\\bin"
         // Replace 'docker-hub-credentials' with each user's Docker Hub credentials ID
         DOCKERHUB_CREDENTIALS = credentials('docker-hub-credentials')
         // Set Docker image name using environment variable for Docker Hub username
