--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,12 +1,15 @@
-   pipeline {
+pipeline {
     agent any
     
     environment {
+       // Ensure Docker is in the PATH for Jenkins to use it
        PATH = "C:\\WINDOWS\\SYSTEM32;C:\\Program Files\\Docker\\Docker\\resources\\bin"
-        // Replace 'docker-hub-credentials' with each user's Docker Hub credentials ID
-        DOCKERHUB_CREDENTIALS = credentials('docker-hub-credentials')
-        // Set Docker image name using environment variable for Docker Hub username
-        DOCKER_IMAGE = "${DOCKERHUB_CREDENTIALS_USR}/awwin:${env.BUILD_NUMBER}"
+       
+       // The credentials ID that contains your Docker Hub username and PAT
+       DOCKERHUB_CREDENTIALS = credentials('docker-hub-credentials')
+       
+       // Set Docker image name using Docker Hub username and build number
+       DOCKER_IMAGE = "${DOCKERHUB_CREDENTIALS_USR}/awwin:${env.BUILD_NUMBER}"
     }
     
     stages {
@@ -19,7 +22,7 @@
         stage('Build Docker Image') {
             steps {
                 script {
-                    // Build the Docker image using the user's Docker Hub username
+                    // Build the Docker image with the provided tag
                     bat "docker build -t ${DOCKER_IMAGE} ."
                 }
             }
@@ -37,7 +40,7 @@
         stage('Login to DockerHub') {
             steps {
                 script {
-                    // Login to Docker Hub using the provided credentials
+                    // Login to Docker Hub using the stored credentials (username and PAT)
                     bat "docker login -u ${DOCKERHUB_CREDENTIALS_USR} -p ${DOCKERHUB_CREDENTIALS_PSW}"
                 }
             }
@@ -46,7 +49,7 @@
         stage('Push to DockerHub') {
             steps {
                 script {
-                    // Push the image to the user's Docker Hub repository
+                    // Push the Docker image to Docker Hub
                     bat "docker push ${DOCKER_IMAGE}"
                 }
             }
@@ -55,7 +58,7 @@
         stage('Deploy Backend') {
             steps {
                 script {
-                    // Deploy the Spring backend application (customize port as needed)
+                    // Deploy the Spring backend app using the built Docker image
                     bat "docker run -d -p 8081:8081 spring-app"
                 }
             }
@@ -64,7 +67,7 @@
         stage('Deploy Frontend') {
             steps {
                 script {
-                    // Deploy the Angular frontend (customize port as needed)
+                    // Deploy the Angular frontend app using the built Docker image
                     bat "docker run -d -p 4201:80 ${DOCKER_IMAGE}"
                 }
             }
@@ -73,7 +76,7 @@
 
     post {
         always {
-            // Ensure logout from Docker Hub after pipeline completes
+            // Ensure that Docker Hub logout happens after the pipeline completes
             bat "docker logout"
         }
     }
