--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,14 +2,10 @@ pipeline {
     agent any
     
     environment {
-       // Ensure Docker is in the PATH for Jenkins to use it
-       PATH = "C:\\WINDOWS\\SYSTEM32;C:\\Program Files\\Docker\\Docker\\resources\\bin"
-       
-       // The credentials ID that contains your Docker Hub username and PAT
-       DOCKERHUB_CREDENTIALS = credentials('docker-hub-credentials')
-       
-       // Set Docker image name using Docker Hub username and build number
-       DOCKER_IMAGE = "${DOCKERHUB_CREDENTIALS_USR}/awwin:${env.BUILD_NUMBER}"
+        // Replace 'docker-hub-credentials' with each user's Docker Hub credentials ID
+        DOCKERHUB_CREDENTIALS = credentials('docker-hub-credentials')
+        // Set Docker image name using environment variable for Docker Hub username
+        DOCKER_IMAGE = "${DOCKERHUB_CREDENTIALS_USR}/awwin:${env.BUILD_NUMBER}"
     }
     
     stages {
@@ -22,7 +18,7 @@ pipeline {
         stage('Build Docker Image') {
             steps {
                 script {
-                    // Build the Docker image with the provided tag
+                    // Build the Docker image using the user's Docker Hub username
                     bat "docker build -t ${DOCKER_IMAGE} ."
                 }
             }
@@ -40,7 +36,7 @@ pipeline {
         stage('Login to DockerHub') {
             steps {
                 script {
-                    // Login to Docker Hub using the stored credentials (username and PAT)
+                    // Login to Docker Hub using the provided credentials
                     bat "docker login -u ${DOCKERHUB_CREDENTIALS_USR} -p ${DOCKERHUB_CREDENTIALS_PSW}"
                 }
             }
@@ -49,7 +45,7 @@ pipeline {
         stage('Push to DockerHub') {
             steps {
                 script {
-                    // Push the Docker image to Docker Hub
+                    // Push the image to the user's Docker Hub repository
                     bat "docker push ${DOCKER_IMAGE}"
                 }
             }
@@ -58,7 +54,7 @@ pipeline {
         stage('Deploy Backend') {
             steps {
                 script {
-                    // Deploy the Spring backend app using the built Docker image
+                    // Deploy the Spring backend application (customize port as needed)
                     bat "docker run -d -p 8081:8081 spring-app"
                 }
             }
@@ -67,7 +63,7 @@ pipeline {
         stage('Deploy Frontend') {
             steps {
                 script {
-                    // Deploy the Angular frontend app using the built Docker image
+                    // Deploy the Angular frontend (customize port as needed)
                     bat "docker run -d -p 4201:80 ${DOCKER_IMAGE}"
                 }
             }
@@ -76,8 +72,8 @@ pipeline {
 
     post {
         always {
-            // Ensure that Docker Hub logout happens after the pipeline completes
+            // Ensure logout from Docker Hub after pipeline completes
             bat "docker logout"
-        }
-    }
+        }
+    }
 }
